--- a/src/index.html
+++ b/src/index.html
@@ -13,29 +13,21 @@
   <title>Frontend Mentor | QR code component</title>
 
 </head>
-<body>
 
+<body >
 
   <div class="container">
     <section>
-      <div>
-        <img src="../images/image-qr-code.png" alt="QR code" class="qr-code">
-      </div>
-
-      <h1>Improve your front-end skills by building projects</h1> 
+      <img src="../images/image-qr-code.png" alt="QR code" class="qr-code">
+      <h3>Improve your front-end skills by building projects</h3> 
       <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
-      
     </section>
-  
-    <footer>
-      
-       <p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="#">Your Name Here</a>. </p> 
-
-
-    </footer>
-
   </div>
 
+  
+  <footer>
+    <p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="https://github.com/Borghii">Borghii</a>. </p> 
+ </footer>
 
 </body>
 
