--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="src/styles.css">
   
   <title>Frontend Mentor | QR code component</title>
 
@@ -18,7 +18,7 @@
 
   <div class="container">
     <section>
-      <img src="../images/image-qr-code.png" alt="QR code" class="qr-code">
+      <img src="./images/image-qr-code.png" alt="QR code" class="qr-code">
       <h3>Improve your front-end skills by building projects</h3> 
       <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
     </section>
